--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "firebase": "^12.6.0",
-    "@google/genai": "^1.29.1"
+    "@google/genai": "^1.29.1",
+    "agora-rtm-sdk": "^1.5.1",
+    "buffer": "^6.0.3",
+    "long": "^5.2.3"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
